RESOLVED FIXED310161
Take 2: [iOS] Captions do not render when using AVExperienceController
https://bugs.webkit.org/show_bug.cgi?id=310161
Summary Take 2: [iOS] Captions do not render when using AVExperienceController
Andy Estes
Reported 2026-03-17 22:40:11 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-17 22:40:19 PDT
Andy Estes
Comment 2 2026-03-17 22:43:40 PDT
EWS
Comment 3 2026-03-18 09:59:37 PDT
Committed 309487@main (4d3344f625e0): <https://commits.webkit.org/309487@main> Reviewed commits have been landed. Closing PR #60837 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.