Take 2: [iOS] Captions do not render when using AVExperienceController https://bugs.webkit.org/show_bug.cgi?id=310161 rdar://172805095

Reviewed by Eric Carlson.

Two mistakes prevented captions from rendering in AVExperienceController even after 309302@main:
1. VideoPresentationInterfaceAVKit unnecessarily (and incorrectly) overrode
   VideoFullscreenCaptions::setupCaptionsLayer, even though the base class implementation is
   correct for this use case.
2. VideoPresentationInterfaceAVKit set a captions layer on WKAVContentSource, but this is
   unnecessary since the caption layer is already a sublayer of the WebAVPlayerLayer already
   provided to WKAVContentSource.

* Source/WebKit/Platform/ios/VideoPresentationInterfaceAVKit.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceAVKit.mm:
(WebKit::VideoPresentationInterfaceAVKit::setupPlayerViewController):
(WebKit::VideoPresentationInterfaceAVKit::setupCaptionsLayer): Deleted.

Canonical link: https://commits.webkit.org/309487@main